force-app/main/default/objects/ucinn_ascendv2__Deductions__c/ucinn_ascendv2__Deductions__c.object-meta.xml
<CustomObject>
    <description>Many to Many (junction object) relationship between Contacts and Relationships:
Contacts/Constituents who are employed by School can opt to make donations and have the amounts deducted from their paychecks.  The amount, frequency and other details of these deductions are tracked in this object.</description>
    <label>Deduction</label>
    <nameField>
        <label>Deduction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deductions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>