force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__Affiliation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliation</label>
    <referenceTo>ucinn_ascendv2__Affiliation__c</referenceTo>
    <relationshipLabel>Deductions</relationshipLabel>
    <relationshipName>Deductions_Affiliation</relationshipName>
    <type>Lookup</type>
</CustomField>