force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__Affiliation_Organization_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Affiliation_Organization_Formula__c</fullName>
    <formula>ucinn_ascendv2__Affiliation__r.ucinn_ascendv2__Account__r.Name</formula>
    <label>Affiliation Organization</label>
    <type>Text</type>
</CustomField>