force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__Amount_Derived_From_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_Derived_From_Percentage__c</fullName>
    <label>Amount Derived From Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>