force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact to whom the deduction record is associated</description>
    <label>Constituent</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.ucinn_ascendv2__Is_School_Employee_Formula__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Only School employees (Faculty and Staff) will be listed in search results.  All other constituents cannot be entered in a deduction.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deductions</relationshipLabel>
    <relationshipName>Deductions_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>