force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__Date_Received__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Date_Received__c</fullName>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>