force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__Deduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Deduction_Amount__c</fullName>
    <description>Amount to be deducted</description>
    <label>Deduction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>