force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__Deduction_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Deduction_Name_Auto_Number__c</fullName>
    <displayFormat>DED-{0000000}</displayFormat>
    <label>Deduction Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>