force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__Deduction_Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Deduction_Status__c</fullName>
    <label>Deduction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Change in deduction</fullName>
            </value>
            <value>
                <fullName>Roll-over deduction</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>% Donor as per GNC Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>