force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Designation to which the deducted funds will be donated</description>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Deductions</relationshipLabel>
    <relationshipName>Deductions_Designation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>