force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__End_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>