force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__Frequency_of_Deduction__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Frequency_of_Deduction__c</fullName>
    <description>Determines the frequency at which the Deduction Amount or the Deduction percentage will be deducted from the constituent&apos;s paycheck</description>
    <label>Frequency of Deduction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>University Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Hospital Bi-Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>