force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__Home_Department_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Home_Department_Name_Formula__c</fullName>
    <formula>ucinn_ascendv2__Affiliation__r.ucinn_ascendv2__Department__r.ucinn_ascendv2__Department_Name__c</formula>
    <label>Home Department Name</label>
    <type>Text</type>
</CustomField>