force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__Job_Title_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Job_Title_Formula__c</fullName>
    <formula>ucinn_ascendv2__Affiliation__r.ucinn_ascendv2__Job_Title__c</formula>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>