force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__Payroll_Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payroll_Status__c</fullName>
    <label>Payroll Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Workday confirmation</fullName>
            </value>
            <value>
                <fullName>Workday Confirmed</fullName>
            </value>
            <value>
                <fullName>Pledge created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>