force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__Relationship__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Relationship__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Relationship</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>ucinn_ascendv2__Relationship__c.ucinn_ascendv2__Status__c</field>
            <operation>equals</operation>
            <value>Current</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Relationship__c</referenceTo>
    <relationshipLabel>Deductions</relationshipLabel>
    <relationshipName>Deductions_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>