force-app/main/default/objects/ucinn_ascendv2__Deductions__c/fields/ucinn_ascendv2__Source__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Outright Gift</fullName>
            </value>
            <value>
                <fullName>Paper form</fullName>
            </value>
            <value>
                <fullName>Workday Pledge Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>