force-app/main/default/objects/ucinn_ascendv2__Deductions__c/validationRules/ucinn_ascendv2__Amount_or_Percent_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Amount_or_Percent_Required</fullName>
    <active>false</active>
    <description>Either deduction amount or percentage is required.  Both fields cannot be blank.</description>
    <errorConditionFormula>AND(
$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c  &lt;&gt; TRUE,
ISNULL( ucinn_ascendv2__Deduction_Amount__c )  &amp;&amp;  ISNULL( ucinn_ascendv2__Deduction_Percentage__c ))</errorConditionFormula>
    <errorMessage>Either deduction amount or percentage is required.  Both fields cannot be blank.</errorMessage>
</ValidationRule>