force-app/main/default/objects/ucinn_ascendv2__Deductions__c/validationRules/ucinn_ascendv2__End_Date_Greater_Than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__End_Date_Greater_Than_Start_Date</fullName>
    <active>true</active>
    <description>The end date for a deduction must be greater than the start date.</description>
    <errorConditionFormula>AND(
$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c  &lt;&gt; TRUE ,
ucinn_ascendv2__End_Date__c  &lt;=  ucinn_ascendv2__Start_Date__c)</errorConditionFormula>
    <errorMessage>The end date for a deduction cannot be the same or older than the start date.</errorMessage>
</ValidationRule>