force-app/main/default/objects/ucinn_ascendv2__Deductions__c/validationRules/ucinn_ascendv2__Status_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Status_Is_Required</fullName>
    <active>true</active>
    <description>Status is a required field.</description>
    <errorConditionFormula>AND(
$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c  &lt;&gt; TRUE,
ISPICKVAL( ucinn_ascendv2__Deduction_Status__c , &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Source__c</errorDisplayField>
    <errorMessage>Select a status for the deduction.</errorMessage>
</ValidationRule>